[tool.poetry]
name = "incipit"
version = "0.1.0"
description = ""
authors = ["Jérémie Lumbroso <lumbroso@cs.princeton.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.5.1"
pillow = "^8.1.2"
pdf2image = "^1.14.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
