[tool.poetry]
name = "incipit"
version = "2021.3.1"
description = "CLI and Python package to extract staves from musical scores."
authors = ["Jérémie Lumbroso <lumbroso@cs.princeton.edu>"]
license = "LGPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/jlumbroso/incipit"
repository = "https://github.com/jlumbroso/incipit"
include = [
    "README.md",
]
keywords = [
    "command-line tool",
    "image processing",
    "musical score"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Image Processing",
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
click_help_colors = "^0.9"
opencv-python = "^4.5.1"
pillow = "^8.1.2"
PyPDF4 = "^1.27.0"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
incipit = "incipit.cli:main"
